Overflow issues fixed

--- a/components/TopNav/index.module.css
+++ b/components/TopNav/index.module.css
@@ -28,7 +28,7 @@
 }
 
 .nav-buttons{
-    position: absolute;
+    position: fixed;
     top: 80px;
     z-index: 10;
     flex: 100%;
@@ -78,7 +78,7 @@
 }
 
 .close{
-    transform: translateY(calc( -100vh - 80px));
+    transform: translateY(calc( -100vh - 160px));
     animation: 0.5s slide-up linear;
     /* visibility: hidden; */
 }
